# TalkTogetherApp

./: CMakeLists.txt  README.md
forms/: login.cpp  login.h  login.ui  talktogether.cpp  talktogether.h  talktogether.ui
include/: connection.h  messageDisplayer.h  messageType.h  session.h
resource/: Loading.qml  Loading.qml.oJIwfw  Loading.qml.ynfztI  Resource.qrc  rect.qml
src/: connection.cpp  main.cpp  messageDisplayer.cpp  session.cpp
